--- a/monopoly-go-card-tracker/package.json
+++ b/monopoly-go-card-tracker/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
